unpackaged/main/default/objects/CybersourceSettings__c/CybersourceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cybersource Settings</label>
</CustomObject>