unpackaged/main/default/objects/CybersourceSettings__c/fields/MerchantId__c.field-meta.xml
<CustomField>
    <fullName>MerchantId__c</fullName>
    <label>Merchant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>