unpackaged/main/default/objects/CybersourceSettings__c/fields/MerchantKeyId__c.field-meta.xml
<CustomField>
    <fullName>MerchantKeyId__c</fullName>
    <label>Merchant Key Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>