unpackaged/main/default/objects/CybersourceSettings__c/fields/MerchantSecretKey__c.field-meta.xml
<CustomField>
    <fullName>MerchantSecretKey__c</fullName>
    <label>Merchant Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>